[build-system]
requires = ["setuptools>=62.3.0", "pyyaml", "jinja2"]
build-backend = "setuptools.build_meta"

[project]
name = "linktools"
description = "linktools toolkit"
requires-python = ">=3.6"
authors = [{name = "Hu Ji", email = "669898595@qq.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache 2.0"}
dynamic = ["version", "dependencies", "optional-dependencies", "scripts"]

[project.urls]
Homepage = "https://github.com/ice-black-tea/linktools"
Repository = "https://github.com/ice-black-tea/linktools.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["linktools*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
linktools = ["assets/**"]

[tool.setuptools.exclude-package-data]
linktools = ["template/**"]
