[metadata]
license = Apache 2.0

[options]
python_requires = >=3.5
install_requires =
    colorama
    tqdm
    urwid
    pyyaml

[options.extras_require]
frida =
    frida>=15.1.12
    frida-tools
    calmjs.parse
magic =
    lief>0.10.1
    python-magic; platform_system=="Linux"
    python-magic-bin; platform_system=="Darwin"
    python-magic-bin; platform_system=="Windows"
