[metadata]
license = Apache 2.0

[options]
python_requires = >=3.5
install_requires =
    colorama
    tqdm
    urwid
    pyyaml
    filelock>=3.4.0

[options.extras_require]
requests =
    requests[socks]
tidevice =
    tidevice[openssl]
frida =
    frida>=15.0.0
lief =
    lief>0.10.1
    python-magic; platform_system=="Linux"
    python-magic-bin; platform_system=="Darwin"
    python-magic-bin; platform_system=="Windows"
